--- a/packages/react-simple-headless-carousel/src/index.css
+++ b/packages/react-simple-headless-carousel/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.slide-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
