--- a/packages/docs/src/components/HomepageFeatures/styles.module.css
+++ b/packages/docs/src/components/HomepageFeatures/styles.module.css
@@ -9,3 +9,13 @@
   height: 200px;
   width: 200px;
 }
+
+svg {
+  display: inline-block;
+}
+
+h3 {
+  font-weight: bold;
+  font-size: 1.4rem;
+  margin: 16px 0;
+}
